--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,6 +7,8 @@ add_um2_example(./vera/1/1a_make_cad_model.cpp)
 add_um2_example(./vera/1/1a.cpp)
 add_um2_example(./vera/2/2a_make_cad_model.cpp)
 add_um2_example(./vera/2/2a.cpp)
+add_um2_example(./vera/2/2a_nogap_make_cad_model.cpp)
+add_um2_example(./vera/2/2a_nogap.cpp)
 
 # -------------------------------------------------------------
 # C5G7
