--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,44 +71,46 @@ set(UM2_HEADERS
     "include/um2/geometry/Point.hpp"
     "include/um2/geometry/morton_sort_points.hpp"
     "include/um2/geometry/AxisAlignedBox.hpp"
+    "include/um2/geometry/Polytope.hpp"
+    "include/um2/geometry/Dion.hpp"
     "include/um2/geometry/LineSegment.hpp"
-    "include/um2/geometry/Triangle.hpp"
-    "include/um2/geometry/Quadrilateral.hpp"
+    #    "include/um2/geometry/Triangle.hpp"
+    #    "include/um2/geometry/Quadrilateral.hpp"
     "include/um2/geometry/QuadraticSegment.hpp"
-    "include/um2/geometry/QuadraticTriangle.hpp"
-    "include/um2/geometry/QuadraticQuadrilateral.hpp"
-    # physics
-    "include/um2/physics/Material.hpp"
-    # mesh
-    "include/um2/mesh/RegularGrid.hpp"
-    "include/um2/mesh/RegularPartition.hpp"
-    "include/um2/mesh/RectilinearGrid.hpp"
-    "include/um2/mesh/RectilinearPartition.hpp"
-    "include/um2/mesh/CellType.hpp"
-    "include/um2/mesh/MeshType.hpp"
-    "include/um2/mesh/MeshFile.hpp"
-    "include/um2/mesh/io_abaqus.hpp"
-    "include/um2/mesh/io_xdmf.hpp"
-    "include/um2/mesh/io.hpp"
-    "include/um2/mesh/TriMesh.hpp"
-    "include/um2/mesh/QuadMesh.hpp"
-    "include/um2/mesh/QuadraticTriMesh.hpp"
-    "include/um2/mesh/QuadraticQuadMesh.hpp"
-    # mpact
-    "include/um2/mpact/SpatialPartition.hpp"
-    "include/um2/mpact/io.hpp"
-    # gmsh
-    "include/um2/gmsh/base_gmsh_api.hpp"
-    "include/um2/gmsh/io.hpp"
-    "include/um2/gmsh/model.hpp"
-    "include/um2/gmsh/mesh.hpp"
-    #    #    # ray_casting
-    #    #    "include/um2/ray_casting/Ray.hpp"
-    #    # visualization
-    #    "include/um2/visualization/Image2D.hpp"
-    # api
-    "include/um2.hpp"
-    #"include/um2c.h"
+    #    "include/um2/geometry/QuadraticTriangle.hpp"
+    #    "include/um2/geometry/QuadraticQuadrilateral.hpp"
+    #    # physics
+    #    "include/um2/physics/Material.hpp"
+    #    # mesh
+    #    "include/um2/mesh/RegularGrid.hpp"
+    #    "include/um2/mesh/RegularPartition.hpp"
+    #    "include/um2/mesh/RectilinearGrid.hpp"
+    #    "include/um2/mesh/RectilinearPartition.hpp"
+    #    "include/um2/mesh/CellType.hpp"
+    #    "include/um2/mesh/MeshType.hpp"
+    #    "include/um2/mesh/MeshFile.hpp"
+    #    "include/um2/mesh/io_abaqus.hpp"
+    #    "include/um2/mesh/io_xdmf.hpp"
+    #    "include/um2/mesh/io.hpp"
+    #    "include/um2/mesh/TriMesh.hpp"
+    #    "include/um2/mesh/QuadMesh.hpp"
+    #    "include/um2/mesh/QuadraticTriMesh.hpp"
+    #    "include/um2/mesh/QuadraticQuadMesh.hpp"
+    #    # mpact
+    #    "include/um2/mpact/SpatialPartition.hpp"
+    #    "include/um2/mpact/io.hpp"
+    #    # gmsh
+    #    "include/um2/gmsh/base_gmsh_api.hpp"
+    #    "include/um2/gmsh/io.hpp"
+    #    "include/um2/gmsh/model.hpp"
+    #    "include/um2/gmsh/mesh.hpp"
+    #    #    #    # ray_casting
+    #    #    #    "include/um2/ray_casting/Ray.hpp"
+    #    #    # visualization
+    #    #    "include/um2/visualization/Image2D.hpp"
+    #    # api
+    #    "include/um2.hpp"
+    #    #"include/um2c.h"
     )
 
 # Sources
@@ -116,14 +118,14 @@ set(UM2_SOURCES
     # common
     "src/common/Log.cpp"
     # gmsh
-    "src/gmsh/base_gmsh_api.cpp"
-    "src/gmsh/io.cpp"
-    "src/gmsh/model.cpp"
-    "src/gmsh/mesh.cpp"
+    #    "src/gmsh/base_gmsh_api.cpp"
+    #    "src/gmsh/io.cpp"
+    #    "src/gmsh/model.cpp"
+    #    "src/gmsh/mesh.cpp"
   #    # visualization
   #    "src/visualization/Image2D.cpp"
     # api
-    "src/um2.cpp"
+    #    "src/um2.cpp"
     #"src/um2c.cpp"
   ) 
 
