Geom refactor + WIP mesh refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,28 +74,26 @@ set(UM2_HEADERS
     "include/um2/geometry/Polytope.hpp"
     "include/um2/geometry/Dion.hpp"
     "include/um2/geometry/LineSegment.hpp"
-    #    "include/um2/geometry/Triangle.hpp"
-    #    "include/um2/geometry/Quadrilateral.hpp"
+    "include/um2/geometry/Triangle.hpp"
+    "include/um2/geometry/Quadrilateral.hpp"
     "include/um2/geometry/QuadraticSegment.hpp"
-    #    "include/um2/geometry/QuadraticTriangle.hpp"
-    #    "include/um2/geometry/QuadraticQuadrilateral.hpp"
-    #    # physics
-    #    "include/um2/physics/Material.hpp"
-    #    # mesh
-    #    "include/um2/mesh/RegularGrid.hpp"
-    #    "include/um2/mesh/RegularPartition.hpp"
-    #    "include/um2/mesh/RectilinearGrid.hpp"
-    #    "include/um2/mesh/RectilinearPartition.hpp"
-    #    "include/um2/mesh/CellType.hpp"
-    #    "include/um2/mesh/MeshType.hpp"
-    #    "include/um2/mesh/MeshFile.hpp"
-    #    "include/um2/mesh/io_abaqus.hpp"
-    #    "include/um2/mesh/io_xdmf.hpp"
-    #    "include/um2/mesh/io.hpp"
-    #    "include/um2/mesh/TriMesh.hpp"
-    #    "include/um2/mesh/QuadMesh.hpp"
-    #    "include/um2/mesh/QuadraticTriMesh.hpp"
-    #    "include/um2/mesh/QuadraticQuadMesh.hpp"
+    "include/um2/geometry/QuadraticTriangle.hpp"
+    "include/um2/geometry/QuadraticQuadrilateral.hpp"
+    # physics
+    "include/um2/physics/Material.hpp"
+    # mesh
+    "include/um2/mesh/RegularGrid.hpp"
+    "include/um2/mesh/RegularPartition.hpp"
+    "include/um2/mesh/RectilinearGrid.hpp"
+    "include/um2/mesh/RectilinearPartition.hpp"
+    "include/um2/mesh/MeshFile.hpp"
+    "include/um2/mesh/io_abaqus.hpp"
+    "include/um2/mesh/io_xdmf.hpp"
+    "include/um2/mesh/io.hpp"
+    "include/um2/mesh/TriMesh.hpp"
+    "include/um2/mesh/QuadMesh.hpp"
+    "include/um2/mesh/QuadraticTriMesh.hpp"
+    "include/um2/mesh/QuadraticQuadMesh.hpp"
     #    # mpact
     #    "include/um2/mpact/SpatialPartition.hpp"
     #    "include/um2/mpact/io.hpp"
