add more doc about doc

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -4,11 +4,14 @@ find_package(Doxygen REQUIRED)
 
 file(GLOB_RECURSE COMMON_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../include/um2/common/*.hpp)
 file(GLOB_RECURSE MATH_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../include/um2/math/*.hpp)
+file(GLOB_RECURSE UM2_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../include/um2/*.hpp)
+file(GLOB_RECURSE DOC_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../include/um2/doc_demo/*.hpp)
 # Headers
 set(DOCS_HEADERS
         ${COMMON_HEADERS}
         ${MATH_HEADERS}
-        )
+        ${DOC_HEADERS}
+)
 string(REPLACE ";" " " DOCS_HEADERS_SPACE "${DOCS_HEADERS}")
 
 set(DOXYGEN_INPUT_DIR ${DOCS_HEADERS_SPACE})
