--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         compiler: [ gcc, clang ]
         build_type: [ Debug, Release ]
         cuda: [ OFF ]
-        openmp: [ ON, OFF]
+        openmp: [ ON, OFF ]
         dev_mode: [ ON, OFF ]
 
     name: "${{ matrix.compiler }}, ${{ matrix.build_type }}, OMP=${{ matrix.openmp }}, 
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up gcc 
+      - name: Set up gcc
         shell: bash
         if: matrix.compiler == 'gcc'
         run: |
@@ -29,9 +29,9 @@ jobs:
           echo "CC=gcc-12" >> $GITHUB_ENV 
           echo "CXX=g++-12" >> $GITHUB_ENV 
 
-      - name: Set up clang 
+      - name: Set up clang
         shell: bash
-        if: matrix.compiler == 'clang' 
+        if: matrix.compiler == 'clang'
         run: |
           sudo apt -y update
           sudo apt install -y clang-14
@@ -46,7 +46,7 @@ jobs:
           #      - name: Vis
           #        shell: bash
           #        if: matrix.vis == 'ON'
-          #        run: sudo apt install -y xorg-dev libgl1-mesa-dev
+        #        run: sudo apt install -y xorg-dev libgl1-mesa-dev
 
       - name: Dev mode dependencies
         shell: bash
@@ -68,8 +68,8 @@ jobs:
         run: make -C build format-check
 
       - name: Run tests
-        run: 
-          make -j -C build test 
+        run:
+          make -j -C build test
 
       - name: Upload coverage
         if: matrix.dev_mode == 'ON' && matrix.build_type == 'Debug'  && matrix.compiler == 'gcc'
@@ -77,6 +77,6 @@ jobs:
           sudo apt install -y python3 python3-pip
           python3 -m pip install --upgrade pip
           python3 -m pip install cpp-coveralls
-          coveralls -e cmake-build-debug/ -e env/ -e scripts/ -e tpls/ --gcov /usr/bin/gcov-12
+          coveralls -e cmake-build-debug/ -e env/ -e scripts/ -e tpls/ -e tests/ -e examples/ --gcov /usr/bin/gcov-12
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }} # read the token from github env
