--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Gmsh
         shell: bash
-        if: matrix.gmsh = 'ON'
+        if: matrix.gmsh == 'ON'
         run: |
           wget https://gmsh.info/bin/Linux/gmsh-4.11.1-Linux64-sdk.tgz
           tar -xzvf gmsh-4.11.1-Linux64-sdk.tgz
