--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,12 @@ jobs:
       matrix:
         compiler: [ gcc, clang ]
         build_type: [ Debug, Release ]
-        openmp: [ ON, OFF]
         dev_mode: [ ON, OFF ]
         gmsh: [ ON, OFF ]
           #PAR_STL
           #INT64
 
-    name: "${{ matrix.compiler }},${{ matrix.build_type }},OMP=${{ matrix.openmp }},Dev=${{ matrix.dev_mode }}"
+    name: "${{ matrix.compiler }}-${{ matrix.build_type }},Dev=${{ matrix.dev_mode }},Gmsh=${{ matrix.gmsh }}"
 
     steps:
       - uses: actions/checkout@v3
@@ -35,7 +34,8 @@ jobs:
         run: |
           sudo apt -y update
           sudo apt install -y libhdf5-dev \
-                              libpugixml-dev
+                              libpugixml-dev \
+                              libomp-15-dev
 
       - name: gcc
         shell: bash
@@ -59,11 +59,6 @@ jobs:
           echo "CC=clang-15" >> $GITHUB_ENV
           echo "CXX=clang++-15" >> $GITHUB_ENV
 
-      - name: OpenMP
-        shell: bash
-        if: matrix.openmp == 'ON'
-        run: sudo apt install -y libomp-15-dev
-
       - name: Gmsh
         shell: bash
         if: matrix.gmsh == 'ON'
@@ -81,7 +76,6 @@ jobs:
         run: |
           cmake -S . -B build \
                 -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-                -DUM2_ENABLE_OPENMP=${{ matrix.openmp }} \
                 -DUM2_DEV_MODE=${{ matrix.dev_mode }} \
                 -DUM2_ENABLE_GMSH=${{ matrix.gmsh }} \
                 -DUM2_ENABLE_CUDA=OFF
