--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,8 @@ jobs:
         if: matrix.dev_mode == 'ON'
         run: |
           sudo apt install -y clang-tools-15 cppcheck libomp-15-dev
+          sudo rm /usr/bin/clang-tidy
+          sudo ln -s /usr/bin/clang-tidy-15 /usr/bin/clang-tidy
 
       - name: clang
         shell: bash
