--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        compiler: [clang ]
+        compiler: [gcc, clang]
         build_type: [Debug, Release]
-        dev_mode: [ ON]
-        gmsh: [ ON]
+        dev_mode: [ON]
+        gmsh: [ON]
           #PAR_STL
           #INT64
 
