--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,9 +87,9 @@ set(UM2_HEADERS
     "include/um2/mesh/RectilinearGrid.hpp"
     "include/um2/mesh/RectilinearPartition.hpp"
     "include/um2/mesh/MeshFile.hpp"
-    "include/um2/mesh/io_abaqus.hpp"
-    "include/um2/mesh/io_xdmf.hpp"
-    "include/um2/mesh/io.hpp"
+    #    "include/um2/mesh/io_abaqus.hpp"
+    #    "include/um2/mesh/io_xdmf.hpp"
+    #    "include/um2/mesh/io.hpp"
     "include/um2/mesh/TriMesh.hpp"
     "include/um2/mesh/QuadMesh.hpp"
     "include/um2/mesh/QuadraticTriMesh.hpp"
