--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -53,8 +53,8 @@ add_um2_test(./mesh/QuadMesh.cpp)
 add_um2_test(./mesh/QuadraticTriMesh.cpp)
 add_um2_test(./mesh/QuadraticQuadMesh.cpp)
 add_um2_test(./mesh/MeshFile.cpp)
-add_um2_test(./mesh/io_abaqus.cpp)
-add_um2_test(./mesh/io_xdmf.cpp)
+#add_um2_test(./mesh/io_abaqus.cpp)
+#add_um2_test(./mesh/io_xdmf.cpp)
 #
 ## ------------------------------------------------------------------------------
 ## mpact
