--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,9 @@
 include(${PROJECT_SOURCE_DIR}/cmake/add_um2_test.cmake)
 
-# ------------------------------------------------------------------------------
+#===============================================================================
 # stdlib
-# ------------------------------------------------------------------------------
+#===============================================================================
+
 add_um2_test(./stdlib/algorithm/copy.cpp)
 add_um2_test(./stdlib/memory/addressof.cpp)
 add_um2_test(./stdlib/memory/construct_at.cpp)
@@ -10,24 +11,27 @@ add_um2_test(./stdlib/Vector.cpp)
 add_um2_test(./stdlib/sto.cpp)
 add_um2_test(./stdlib/String.cpp)
 
-## ------------------------------------------------------------------------------
-## common
-## ------------------------------------------------------------------------------
-#add_um2_test(./common/Log.cpp)
-#add_um2_test(./common/ShortString.cpp)
-#add_um2_test(./common/Color.cpp)
-#add_um2_test(./common/to_vecvec.cpp)
-#
-## ------------------------------------------------------------------------------
-## math
-## ------------------------------------------------------------------------------
-#add_um2_test(./math/morton.cpp)
-#add_um2_test(./math/Vec.cpp)
-#add_um2_test(./math/Mat.cpp)
-#
-## ------------------------------------------------------------------------------
+#===============================================================================
+# common
+#===============================================================================
+
+add_um2_test(./common/Log.cpp)
+add_um2_test(./common/ShortString.cpp)
+add_um2_test(./common/Color.cpp)
+add_um2_test(./common/to_vecvec.cpp)
+
+#===============================================================================
+# math
+#===============================================================================
+
+add_um2_test(./math/morton.cpp)
+add_um2_test(./math/Vec.cpp)
+add_um2_test(./math/Mat.cpp)
+
+##===============================================================================
 ## geometry
-## ------------------------------------------------------------------------------
+##===============================================================================
+#
 #add_um2_test(./geometry/Point.cpp)
 #add_um2_test(./geometry/morton_sort_points.cpp)
 #add_um2_test(./geometry/AxisAlignedBox.cpp)
@@ -38,9 +42,9 @@ add_um2_test(./stdlib/String.cpp)
 #add_um2_test(./geometry/QuadraticTriangle.cpp)
 #add_um2_test(./geometry/QuadraticQuadrilateral.cpp)
 #
-## ------------------------------------------------------------------------------
+##==============================================================================
 ## mesh
-## ------------------------------------------------------------------------------
+##==============================================================================
 ## Copy the mesh files to the built test directory
 #file(COPY ${PROJECT_SOURCE_DIR}/tests/mesh/mesh_files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 #
@@ -56,26 +60,26 @@ add_um2_test(./stdlib/String.cpp)
 ##add_um2_test(./mesh/io_abaqus.cpp)
 ##add_um2_test(./mesh/io_xdmf.cpp)
 ##
-### ------------------------------------------------------------------------------
+###==============================================================================
 ### mpact
-### ------------------------------------------------------------------------------
+###==============================================================================
 ##add_um2_test(./mpact/SpatialPartition.cpp)
 ##
-### ------------------------------------------------------------------------------
+###==============================================================================
 ### gmsh
-### ------------------------------------------------------------------------------
+###==============================================================================
 ##add_um2_test(./gmsh/base_gmsh_api.cpp)
 ##add_um2_test(./gmsh/io.cpp)
 ##add_um2_test(./gmsh/model.cpp)
 #
-#### ------------------------------------------------------------------------------
+####==============================================================================
 #### ray_casting
-#### ------------------------------------------------------------------------------
-###add_um2_test(./ray_casting/intersect/Ray-LineSegment.cpp)
+####==============================================================================
+###add_um2_test(./ray_casting/intersect/Ray=LineSegment.cpp)
 ##
-### ------------------------------------------------------------------------------
+###==============================================================================
 ### visualization
-### ------------------------------------------------------------------------------
+###==============================================================================
 ##add_um2_test(./visualization/Image2D.cpp)
 ##
 ###
