--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -25,4 +25,4 @@ add_um2_benchmark(./geometry/QuadraticSegment.cpp)
 # Copy the mesh files
 file(COPY ${PROJECT_SOURCE_DIR}/benchmarks/mesh/mesh_files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})    
 
-add_um2_benchmark(./mesh/QuadraticTriMesh.cpp)
+add_um2_benchmark(./mesh/tri6_faceContaining.cpp)
