--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -61,11 +61,15 @@ add_um2_test(./mesh/QuadraticQuadMesh.cpp)
 add_um2_test(./mesh/io_abaqus.cpp)
 add_um2_test(./mesh/io_xdmf.cpp)
 
-###==============================================================================
-### mpact
-###==============================================================================
-##add_um2_test(./mpact/SpatialPartition.cpp)
-##
+#==============================================================================
+# mpact
+#==============================================================================
+
+# Copy the mesh files to the built test directory
+file(COPY ${PROJECT_SOURCE_DIR}/tests/mpact/mpact_mesh_files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+add_um2_test(./mpact/SpatialPartition.cpp)
+
 ###==============================================================================
 ### gmsh
 ###==============================================================================
