--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,8 +93,8 @@ set(UM2_SOURCES
     # common
     "src/common/Log.cpp"
     # mpact
-    #    "src/mpact/SpatialPartition.cpp"
-    #"src/mpact/io.cpp"
+    "src/mpact/SpatialPartition.cpp"
+    "src/mpact/io.cpp"
     # gmsh
     #    "src/gmsh/base_gmsh_api.cpp"
     #    "src/gmsh/io.cpp"
