--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -70,18 +70,14 @@ file(COPY ${PROJECT_SOURCE_DIR}/tests/mpact/mpact_mesh_files DESTINATION ${CMAKE
 
 add_um2_test(./mpact/SpatialPartition.cpp)
 
-###==============================================================================
-### gmsh
-###==============================================================================
-##add_um2_test(./gmsh/base_gmsh_api.cpp)
-##add_um2_test(./gmsh/io.cpp)
-##add_um2_test(./gmsh/model.cpp)
-#
-####==============================================================================
-#### ray_casting
-####==============================================================================
-###add_um2_test(./ray_casting/intersect/Ray=LineSegment.cpp)
-##
+#==============================================================================
+# gmsh
+#==============================================================================
+
+add_um2_test(./gmsh/base_gmsh_api.cpp)
+add_um2_test(./gmsh/gmsh_io.cpp)
+add_um2_test(./gmsh/gmsh_model.cpp)
+
 ###==============================================================================
 ### visualization
 ###==============================================================================
