WIP: Update to MPACT C API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,12 +99,12 @@ set(UM2_SOURCES
     "src/gmsh/base_gmsh_api.cpp"
     "src/gmsh/io.cpp"
     "src/gmsh/model.cpp"
-    #    "src/gmsh/mesh.cpp"
+    "src/gmsh/mesh.cpp"
   #    # visualization
   #    "src/visualization/Image2D.cpp"
     # api
-    #    "src/um2.cpp"
-    #"src/um2c.cpp"
+    "src/um2.cpp"
+    "src/um2c.cpp"
   ) 
 
 add_library(um2 SHARED ${UM2_SOURCES})
