--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -87,3 +87,13 @@ add_um2_test(./gmsh/gmsh_model.cpp)
 ###if (UM2_ENABLE_VIS)
 ###  add_um2_test(shader ./visualization/shader.cpp)
 ###endif()
+
+#==============================================================================
+# api
+#==============================================================================
+
+# Copy the mesh files to the built test directory
+file(COPY ${PROJECT_SOURCE_DIR}/tests/api/api_mesh_files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+add_um2_test(./api/um2_cpp_api.cpp)
+add_um2_test(./api/um2_c_api.cpp)
