--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,6 @@ jobs:
           sudo apt install -y python3 python3-pip
           python3 -m pip install --upgrade pip
           python3 -m pip install cpp-coveralls
-          coveralls -i include/ -i tests/ --gcov /usr/bin/gcov-12
+          coveralls -i include -i src --gcov /usr/bin/gcov-12
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
