--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,8 @@ jobs:
           sudo apt install -y clang-tidy-15 clang-format-15 cppcheck libomp-15-dev
           sudo rm /usr/bin/clang-tidy
           sudo ln -s /usr/bin/clang-tidy-15 /usr/bin/clang-tidy
+          sudo rm /usr/bin/clang-format
+          sudo ln -s /usr/bin/clang-format-15 /usr/bin/clang-format
 
       - name: clang
         shell: bash
