--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,11 +5,9 @@ build:
   tools:
     python: "3.10"
 
-# Build from the docs/ directory with Sphinx
 sphinx:
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
 
-# Explicitly set the version of Python and its requirements
 python:
   install:
-    - requirements: docs/python-req/requirements.txt
+    - requirements: docs/requirements-rtd.txt
