--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ on:
 env:
   HDF5_ROOT: /usr
   OMP_NUM_THREADS: 2
+  ENABLE_COVERAGE: OFF
+  COVERALLS_PARALLEL: true
 
 jobs:
   main:
@@ -24,7 +26,6 @@ jobs:
         gmsh: [ON]
         int64: [OFF, ON]
         float64: [OFF, ON]
-          #PAR_STL
 
     name: "${{matrix.compiler}}-${{matrix.build_type}},Dev=${{matrix.dev_mode}},Gmsh=${{matrix.gmsh}},I64=${{matrix.int64}},F64=${{matrix.float64}}"
 
@@ -77,11 +78,6 @@ jobs:
         run: |
           echo "ENABLE_COVERAGE=ON" >> $GITHUB_ENV
 
-          #      - name: Vis
-          #        shell: bash
-          #        if: matrix.vis == 'ON'
-          #        run: sudo apt install -y xorg-dev libgl1-mesa-dev
-
       - name: Configure
         run: |
           cmake -S . -B build \
@@ -90,6 +86,7 @@ jobs:
                 -DUM2_USE_GMSH=${{ matrix.gmsh }} \
                 -DUM2_ENABLE_INT64=${{ matrix.int64 }} \
                 -DUM2_ENABLE_FLOAT64=${{ matrix.float64}} \
+                -DUM2_USE_COVERAGE=${ENABLE_COVERAGE} \
                 -DUM2_USE_CUDA=OFF
 
       - name: Format check
@@ -102,12 +99,23 @@ jobs:
       - name: Run tests
         run: make -j -C build test
 
-      - name: Upload coverage
+      - name: coverage
         if: matrix.dev_mode == 'ON' && matrix.build_type == 'Debug'  && matrix.compiler == 'gcc'
         run: |
           sudo apt install -y python3 python3-pip
           python3 -m pip install --upgrade pip
           python3 -m pip install cpp-coveralls
-          coveralls -i include -i src --gcov /usr/bin/gcov-12
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          coveralls -i include -i src --gcov /usr/bin/gcov-12 --dump cpp_cov.json
+          coveralls --merge=cpp_cov.json --service=github
+
+  finish:
+    needs: main
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Coveralls finished
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.github_token }}
+          parallel-finished: true
+
+          #          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
