--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ env:
   HDF5_ROOT: /usr
   OMP_NUM_THREADS: 2
   ENABLE_COVERAGE: OFF
+  COVERALLS_PARALLEL: true
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
@@ -43,6 +44,8 @@ jobs:
         if: matrix.compiler == 'gcc'
         run: |
           sudo apt install -y gcc-12 g++-12
+          sudo rm /usr/bin/gcov
+          sudo ln -s /usr/bin/gcov-12 /usr/bin/gcov
           echo "CC=gcc-12" >> $GITHUB_ENV
           echo "CXX=g++-12" >> $GITHUB_ENV
 
@@ -74,7 +77,7 @@ jobs:
           echo "GMSH_ROOT=${PWD}/gmsh-4.11.1-Linux64-sdk" >> $GITHUB_ENV
 
       - name: Configure with coverage
-        if: matrix.dev_mode == 'ON' && matrix.build_type == 'Debug'  && matrix.compiler == 'gcc' && matrix.int64 == 'OFF' && matrix.float64 == 'OFF'
+        if: matrix.dev_mode == 'ON' && matrix.build_type == 'Debug'  && matrix.compiler == 'gcc'
         run: |
           echo "ENABLE_COVERAGE=ON" >> $GITHUB_ENV
 
@@ -101,7 +104,7 @@ jobs:
         run: make -j -C build test
 
       - name: coverage
-        if: matrix.dev_mode == 'ON' && matrix.build_type == 'Debug'  && matrix.compiler == 'gcc' && matrix.int64 == 'OFF' && matrix.float64 == 'OFF'
+        if: matrix.dev_mode == 'ON' && matrix.build_type == 'Debug'  && matrix.compiler == 'gcc'
         run: |
           sudo apt install -y python3 python3-pip
           python3 -m pip install --upgrade pip
@@ -118,3 +121,4 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.github_token }}
+          parallel-finished: true
