Insertion sort for ray/mesh intersection

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,5 +1,7 @@
 include(${PROJECT_SOURCE_DIR}/cmake/add_um2_benchmark.cmake)
 
+add_um2_benchmark(./sort.cpp)
+
 #===============================================================================
 # math 
 #===============================================================================
