--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -98,4 +98,7 @@ using Float = float; // Floating point type in API
 // Integer type for material IDs.
 using MaterialID = int8_t;
 
+template <class... T>
+constexpr bool always_false = false;
+
 // NOLINTEND(modernize-macro-to-enum)
